2013-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* 0.2 release

2012-05-29  Mark Ellis  <mark@mpellis.org.uk>

	* 0.1.1 release

2012-05-28  Mark Ellis  <mark@mpellis.org.uk>

	* change dependency on librapi2 to libsynce0 for synce-core

2010-09-13  Tejas Guruswamy <masterpatricko@gmail.com>
	* Update docbook dtd verion from 4.1.2 to 4.2
	* Up version to 0.1.1

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-06-27  Tejas Guruswamy <masterpatricko@gmail.com>
	
	* Removed last Qt3support requirements
	* Updated cmake build system to generate better source packages from svn


2009-04-30  Mark Ellis <mark@mpellis.org.uk>

	* initial conversion to kde4
